Melhorias de código

--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -7,7 +7,7 @@
         "projects": "Projetos",
         "blog": "Blog",
         "contact": "Contato",
-        "language": "Idioma"
+        "language": "Language"
       },
       "home": {
           "title": "Eu sou o Gabriel Habermann, bem-vindo ao meu portfólio!",
